--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
             <div class="tappa">
                 <h4>TAPPA 01 – Alla scoperta della struttura dell’impianto</h4>
                 <br>
+                <img src="img/foto1.png" alt="Descrizione immagine" style="max-width: 100%; border-radius: 10px;" />
                 <p>La nostra visita è iniziata con una panoramica generale dell’impianto di biogas di Cavernago, una realtà all’avanguardia nella produzione di energia rinnovabile a partire da materiale organico.</p>
                 <p>Abbiamo subito notato l’articolazione ordinata e funzionale della struttura, composta da:</p>
                 <ul>
