--- a/index.html
+++ b/index.html
@@ -251,9 +251,8 @@
                         <p>Ogni digestore è alto 6 metri …</p>
                     </div>
                     <div class="tappa-image">
-                        <img src="img/foto3a.png" alt="Tramoggia">
-                        <br><br>
-                        <img src="img/foto3b.png" alt="Digestori">
+                        <img src="img/foto3.png" alt="Tramoggia">
+                        <br>
                     </div>
                 </div>
             </div>
@@ -290,7 +289,8 @@
                         <p>Tutto questo contribuisce …</p>
                     </div>
                     <div class="tappa-image">
-                        <img src="img/foto5.png" alt="Sala Pompe">
+                        <img src="img/foto5a.png" alt="Sala Pompe">
+                        <img src="img/foto5b.png" alt="Sala Pompe">
                     </div>
                 </div>
             </div>
