--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                                     <li>Centrifuga</li>
                                 </ul>
                             </li>
-                            <li>Gestione dei prodotti...</li>
+                            <li>Gestione dei prodotti...NO</li>
                         </ul>
                     </div>
                 </div>
