--- a/index.html
+++ b/index.html
@@ -63,14 +63,15 @@
                 <h4>TAPPA 01 – Alla scoperta della struttura dell’impianto</h4>
                 <div class="tappa-content">
                     <div class="tappa-text">
-                        <p>La nostra visita è iniziata con una panoramica generale dell’impianto di biogas di Cavernago, una realtà all’avanguardia nella produzione di energia rinnovabile a partire da materiale organico.</p>
-                        <ul>
-                            <li>4 digestori anaerobici...</li>
-                            <li>1 grande vasca di raccolta...</li>
-                            <li>Silos di stoccaggio...</li>
-                            <li>Una tramoggia...</li>
-                        </ul>
-                        <p>Questa prima tappa ci ha permesso di visualizzare la "mappa" del processo...</p>
+                        La nostra visita è iniziata con una panoramica generale dell’impianto di biogas di Cavernago, una realtà all’avanguardia nella produzione di energia rinnovabile a partire da materiale organico.</p>
+                <p>Abbiamo subito notato l’articolazione ordinata e funzionale della struttura, composta da:</p>
+                <ul>
+                    <li>4 digestori anaerobici, i veri protagonisti del processo di trasformazione della biomassa in biogas;</li>
+                    <li>1 grande vasca di raccolta, dove viene depositato il mais trinciato, in attesa della fase di conservazione;</li>
+                    <li>Silos di stoccaggio, utilizzati per aggiungere melassa alla biomassa, migliorandone la fermentazione e quindi la produzione di metano;</li>
+                    <li>Una tramoggia, ovvero un enorme imbuto metallico che serve per alimentare in modo costante e controllato i digestori con il materiale solido.</li>
+                </ul>
+                <p>Questa prima tappa ci ha permesso di visualizzare la "mappa" del processo e capire quanto sia importante ogni singolo componente dell’impianto per garantire una produzione efficiente e sicura di biogas.</p>
                     </div>
                     <div class="tappa-image">
                         <img src="img/foto1.png" alt="Struttura impianto Cavernago">
@@ -83,9 +84,9 @@
                 <h4>TAPPA 02 – La preparazione del materiale organico</h4>
                 <div class="tappa-content">
                     <div class="tappa-text">
-                        <p>Abbiamo proseguito la visita osservando le trincee di stoccaggio...</p>
-                        <p>Il materiale pressato viene poi coperto con teli in plastica...</p>
-                        <p>È stato affascinante scoprire quanto questa fase sia delicata...</p>
+                <p>Abbiamo proseguito la visita osservando le trincee di stoccaggio, grandi vasche in cemento dove il mais trinciato viene accumulato. Qui, con l’ausilio di pesanti macchinari, la biomassa viene compattata accuratamente per eliminare l’aria e creare le condizioni ideali per la conservazione anaerobica.</p>
+                <p>Il materiale pressato viene poi coperto con teli in plastica, fissati con tubi zavorrati per proteggerlo da agenti atmosferici e impedire fermentazioni indesiderate. Quando arriva il momento di utilizzare il mais fermentato, pale meccaniche e ruspe lo prelevano e lo trasferiscono alla tramoggia, dove comincia il processo di alimentazione dei digestori.</p>
+                <p>È stato affascinante scoprire quanto questa fase sia delicata: una cattiva conservazione del materiale può compromettere l’intero processo di digestione anaerobica!</p>
                     </div>
                     <div class="tappa-image">
                         <img src="img/foto2.png" alt="Preparazione materiale organico">
@@ -98,17 +99,17 @@
                 <h4>TAPPA 03 – Tramoggia e digestori</h4>
                 <div class="tappa-content">
                     <div class="tappa-text">
-                        <p>In questa tappa abbiamo approfondito il funzionamento della tramoggia...</p>
-                        <ul>
-                            <li>Digestori principali...</li>
-                            <li>Digestori secondari...</li>
-                        </ul>
-                        <p>Ogni digestore è alto 6 metri...</p>
+<p>In questa tappa abbiamo approfondito il funzionamento della tramoggia, un sistema a imbuto che trasporta e dosa il materiale solido (come il mais o la FORSU) verso i digestori principali.</p>
+                <p>Abbiamo osservato le differenze tra:</p>
+                <ul>
+                    <li>Digestori principali: più produttivi, alimentati con biomassa ad alto contenuto di carbonio;</li>
+                    <li>Digestori secondari: meno produttivi, destinati a biomasse con minore potere energetico.</li>
+                </ul>
+                <p>Ogni digestore è alto 6 metri (3 interrati, 3 fuori terra) e ha un diametro di 12 metri. Alla sommità, un pallone mobile si gonfia con l’aumento del gas prodotto. In caso di eccessiva pressione, un camino di sicurezza entra in funzione per evitare rischi, rilasciando il gas in eccesso in modo controllato.</p>
+                <p>All’interno, delle serpentine riscaldanti mantengono la temperatura a circa 40°C, ideale per i batteri mesofili che trasformano la biomassa in biogas. Questo sistema è alimentato con acqua calda proveniente dalla sala pompe.</p>
                     </div>
                     <div class="tappa-image">
-                        <img src="img/foto3a.png" alt="Tramoggia">
-                        <br><br>
-                        <img src="img/foto3b.png" alt="Digestori">
+                        <img src="img/foto3.png" alt="Tramoggia">
                     </div>
                 </div>
             </div>
@@ -118,9 +119,10 @@
                 <h4>TAPPA 04 – Sala di Controllo e Quadro Elettrico</h4>
                 <div class="tappa-content">
                     <div class="tappa-text">
-                        <p>La quarta tappa ci ha portati nel "cervello" dell’impianto...</p>
-                        <p>Qui si monitora in tempo reale...</p>
-                        <p>Un dato sorprendente: la sala consuma appena 0,3 kW...</p>
+<p>La quarta tappa ci ha portati nel "cervello" dell’impianto: la sala di controllo.</p>
+                <p>Qui, grazie a un quadro elettrico avanzato, si monitora in tempo reale ogni parametro del processo: dalle temperature dei digestori alla pressione interna, fino ai flussi di gas e al funzionamento di pompe e valvole.</p>
+                <p>Un dato sorprendente: la sala consuma appena 0,3 kW, a fronte di una produzione totale dell’impianto di 3 MW (3000 kW). Un esempio eccellente di efficienza energetica e sostenibilità.</p>
+                <p>Abbiamo anche osservato un diagramma funzionale che rappresenta graficamente i collegamenti e i flussi tra le varie componenti, rendendo più chiara la complessità e l’efficacia dell’organizzazione interna.</p>
                     </div>
                     <div class="tappa-image">
                         <img src="img/foto4.png" alt="Sala di Controllo">
@@ -133,15 +135,16 @@
                 <h4>TAPPA 05 – La Sala Pompe</h4>
                 <div class="tappa-content">
                     <div class="tappa-text">
-                        <p>La sala pompe rappresenta il centro nevralgico della movimentazione...</p>
-                        <ul>
-                            <li>Trasferimento della biomassa...</li>
-                            <li>Gestione del riscaldamento...</li>
-                            <li>Controllo e dosaggio...</li>
-                            <li>Desolfazione biologica...</li>
-                            <li>Aspirazione del digestato...</li>
-                            <li>Aspirazione dalle vasche...</li>
-                        </ul>
+<p>La sala pompe rappresenta il centro nevralgico della movimentazione dei liquidi nell’impianto. Le pompe svolgono funzioni fondamentali per l’equilibrio del sistema:</p>
+                <ul>
+                    <li>Trasferimento della biomassa tra le diverse fasi (pre-digestore, post-digestore, stoccaggio, separatore);</li>
+                    <li>Gestione del riscaldamento: circolano acqua calda nelle serpentine dei digestori, regolandone la temperatura;</li>
+                    <li>Controllo e dosaggio dei flussi in ingresso, in base ai parametri di processo come pH e temperatura;</li>
+                    <li>Desolfazione biologica: un processo per eliminare l’acido solfidrico (H₂S) dal biogas, trasformandolo in zolfo elementare;</li>
+                    <li>Aspirazione del digestato per inviarlo alle vasche di stoccaggio;</li>
+                    <li>Aspirazione dalle vasche per reimmettere i substrati nel ciclo produttivo.</li>
+                </ul>
+                <p>Tutto questo contribuisce al perfetto funzionamento dell’impianto e all’ottimizzazione della produzione di biogas.</p>
                     </div>
                     <div class="tappa-image">
                         <img src="img/foto5a.png" alt="Sala Pompe">
@@ -156,17 +159,17 @@
                 <h4>TAPPA 06 – Anatomia di un Digestore</h4>
                 <div class="tappa-content">
                     <div class="tappa-text">
-                        <p>In questa tappa abbiamo approfondito la struttura tecnica...</p>
-                        <p><strong>I 7 elementi fondamentali sono:</strong></p>
-                        <ul>
-                            <li>Vasca di digestione...</li>
-                            <li>Sistema di riscaldamento...</li>
-                            <li>Sistema di agitazione...</li>
-                            <li>Copertura...</li>
-                            <li>Sistema di alimentazione...</li>
-                            <li>Sistema di scarico...</li>
-                            <li>Sistema di trattamento...</li>
-                        </ul>
+<p>In questa tappa abbiamo approfondito la struttura tecnica di un digestore anaerobico, un sistema chiuso in cui avviene la trasformazione della biomassa in biogas e digestato.</p>
+                <p><strong>I 7 elementi fondamentali sono:</strong></p>
+                <ul>
+                    <li>Vasca di digestione: a tenuta stagna, isolata, in acciaio o cemento.</li>
+                    <li>Sistema di riscaldamento: mantiene la temperatura ideale per la digestione (mesofila o termofila).</li>
+                    <li>Sistema di agitazione: evita la formazione di croste e mantiene la biomassa omogenea.</li>
+                    <li>Copertura (gasometro): raccoglie il biogas prodotto.</li>
+                    <li>Sistema di alimentazione: tramite tramoggia, pompe o coclee.</li>
+                    <li>Sistema di scarico: rimuove il digestato verso le vasche di stoccaggio.</li>
+                    <li>Sistema di trattamento del biogas: rimuove impurità e consente l’uso del gas per cogenerazione o produzione di biometano.</li>
+                </ul>
                     </div>
                     <div class="tappa-image">
                         <img src="img/foto6.png" alt="Anatomia digestore">
@@ -179,13 +182,14 @@
                 <h4>TAPPA 07 – Il Motore a Biogas: Energia Pulita</h4>
                 <div class="tappa-content">
                     <div class="tappa-text">
-                        <p>Una delle tappe più affascinanti è stata la visita al motore a biogas...</p>
-                        <ul>
-                            <li>Ridurre le emissioni di gas serra;</li>
-                            <li>Riutilizzare rifiuti organici;</li>
-                            <li>Promuovere un’economia locale...</li>
-                        </ul>
-                        <p>È un chiaro esempio di economia circolare...</p>
+                         <p>Una delle tappe più affascinanti è stata la visita al motore a biogas, dove il gas prodotto dalla digestione anaerobica viene bruciato in modo controllato per produrre energia elettrica e termica.</p>
+                <p>Il motore funziona in modo simile a quello di un’auto a gas, ma utilizza metano rinnovabile, contribuendo a:</p>
+                <ul>
+                    <li>Ridurre le emissioni di gas serra;</li>
+                    <li>Riutilizzare rifiuti organici;</li>
+                    <li>Promuovere un’economia locale, senza bisogno di combustibili fossili.</li>
+                </ul>
+                <p>È un chiaro esempio di economia circolare: dallo scarto alla risorsa, con intelligenza e innovazione.</p>
                     </div>
                     <div class="tappa-image">
                         <img src="img/foto7.png" alt="Motore a biogas">
@@ -198,25 +202,29 @@
                 <h4>TAPPA 08 – Dewatering: la disidratazione del digestato</h4>
                 <div class="tappa-content">
                     <div class="tappa-text">
-                        <p>Infine, abbiamo osservato il processo di dewatering...</p>
-                        <p><strong>🔹 Perché è importante?</strong></p>
-                        <ul>
-                            <li>Riduce i volumi da trasportare;</li>
-                            <li>Permette di ottenere compost solido;</li>
-                            <li>Facilita lo stoccaggio...</li>
-                        </ul>
-                        <p><strong>🔹 Come avviene?</strong></p>
-                        <ul>
-                            <li>Pre-trattamento...</li>
-                            <li>Tecnologie di separazione:
-                                <ul>
-                                    <li>Screw press</li>
-                                    <li>Belt press</li>
-                                    <li>Centrifuga</li>
-                                </ul>
-                            </li>
-                            <li>Gestione dei prodotti...NO</li>
-                        </ul>
+                        <p>Infine, abbiamo osservato il processo di dewatering, ovvero la separazione della parte solida e liquida del digestato, utile per ottimizzare il riutilizzo del materiale residuo.</p>
+                <p><strong> Perché è importante?</strong></p>
+                <ul>
+                    <li>Riduce i volumi da trasportare;</li>
+                    <li>Permette di ottenere compost solido e fertilizzanti liquidi;</li>
+                    <li>Facilita lo stoccaggio e il riutilizzo in agricoltura.</li>
+                </ul>
+                <p><strong>Come avviene?</strong></p>
+                <ul>
+                    <li>Pre-trattamento (eventuale aggiunta di flocculanti);</li>
+                    <li>Tecnologie di separazione:</li>
+                    <ul>
+                        <li>Screw press (vite pressa)</li>
+                        <li>Belt press (nastro filtrante)</li>
+                        <li>Centrifuga (più efficiente ma energivora)</li>
+                    </ul>
+                    <li>Gestione dei prodotti:</li>
+                    <ul>
+                        <li>Solido → compost, ammendante, essiccazione.</li>
+                        <li>Liquido → fertirrigazione o ulteriori trattamenti.</li>
+                    </ul>
+                </ul>
+                <p>Il dewatering è un esempio di come anche la “fine” del processo può generare valore.</p>
                     </div>
                 </div>
             </div>
@@ -226,7 +234,7 @@
                 <h4>CONCLUSIONE</h4>
                 <div class="tappa-content">
                     <div class="tappa-text">
-                        <p>La visita all’impianto di Cavernago ci ha dimostrato che la sostenibilità non è solo un concetto astratto...</p>
+<p>La visita all’impianto di Cavernago ci ha dimostrato che la sostenibilità non è solo un concetto astratto, ma una realtà concreta fatta di ingegno, tecnologia e collaborazione. Ogni passaggio, dalla raccolta del mais fino all’utilizzo del biogas, è parte di un ciclo virtuoso che trasforma gli scarti in energia, rispettando l’ambiente e valorizzando le risorse del territorio.</p>
                     </div>
                 </div>
             </div>
@@ -241,6 +249,10 @@
             <div class="quiz-container">
                 <h3>Quiz 2 – Cruciverba</h3>
                 <iframe src="https://learningapps.org/watch?v=pe2s76arj25" style="width:100%; height:500px; border:0;" allowfullscreen></iframe>
+            </div>
+            <div class="quiz-container">
+                <h3>Quiz 3 – Drag and drop</h3>
+                <iframe src="https://learningapps.org/view41116248" style="width:100%; height:500px; border:0;" allowfullscreen></iframe>
             </div>
         </div>
 
