--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Project Work - Biogas</title>
     <style>
         body { margin: 0; font-family: 'Segoe UI', sans-serif; background: #f0f4f2; color: #2e2e2e; line-height: 1.6; }
-        .hero { height: 100vh; background: linear-gradient(to bottom right, #a5d6a7, #2e7d32); display: flex; justify-content: center; align-items: center; }
+        .hero { height: 100vh; background: /*linear-gradient(to bottom right, #a5d6a7, #2e7d32)*/blue; display: flex; justify-content: center; align-items: center; }
         .hero-box { text-align: center; padding: 50px 40px; background: rgba(255,255,255,0.15); border-radius: 25px; backdrop-filter: blur(8px); box-shadow:0 8px 32px rgba(0,0,0,0.2); transition: transform .3s; }
         .hero-box:hover { transform: scale(1.02); }
         .hero h1 { font-size: 3.5em; margin-bottom:10px; color:#fff; letter-spacing:1px;}
@@ -123,7 +123,7 @@ display:flex; flex-wrap:wrap; gap:20px; align-items:flex-start;
             </div>
 
             <!-- Tappa 03 -->
-            <div class="tappa tappa-no-align">
+            <div class="tappa-no-align">
                 <h4>TAPPA 03 – Tramoggia e digestori</h4>
                 <div class="tappa-content">
                     <div class="tappa-text">
