--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <p>Un dato sorprendente: la sala consuma appena 0,3 kW, a fronte di una produzione totale dell’impianto di 3 MW (3000 kW). Un esempio eccellente di efficienza energetica e sostenibilità.</p>
                         <p>Abbiamo anche osservato un diagramma funzionale che rappresenta graficamente i collegamenti e i flussi tra le varie componenti, rendendo più chiara la complessità e l’efficacia dell’organizzazione interna.</p>
                     </div>
-                    <div id="tappa3" class="content">
+                    <div class="tappa-image">
                         <img src="img/foto4.png" alt="Sala di Controllo">
                     </div>
                 </div>
