--- a/index.html
+++ b/index.html
@@ -289,16 +289,55 @@
 
 
         <!-- Sezione LABORATORIO -->
-        <div id="laboratorio" class="section">
-            <h3>Laboratorio Interattivo</h3>
-            <p>Benvenuto nel laboratorio! Tra le attività previste:</p>
-            <ul>
-                <li>🔧 Simulazione del funzionamento di un impianto biogas</li>
-                <li>📊 Creazione di un percorso interattivo decisionale</li>
-                <li>🌍 Progettazione di una centrale sostenibile</li>
-            </ul>
-            <p><em>Contenuti in arrivo…</em></p>
+       <div id="laboratorio" class="section">
+    <h3>Laboratorio: Creazione di Biogas</h3>
+
+    <!-- Step 1 -->
+    <div class="tappa">
+        <h4>STEP 1 – Preparazione della FORSU</h4>
+        <div class="tappa-content">
+            <div class="tappa-text">
+                <p>Siamo andati in laboratorio, dove abbiamo realizzato del biogas a partire dalla FORSU portata da casa.</p>
+                <p>Arrivati in laboratorio ci è stato fatto pesare la FORSU prima di tagliarla in piccole parti.</p>
+                <img src="img/laboratorio1.png" alt="Pesatura FORSU" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+            </div>
         </div>
+    </div>
+
+    <!-- Step 2 -->
+    <div class="tappa">
+        <h4>STEP 2 – Calcolo della massa di Biogas</h4>
+        <div class="tappa-content">
+            <div class="tappa-text">
+                <p>Abbiamo calcolato la massa di Biogas creabile con le varie masse tramite le formule che ci hanno mostrato.</p>
+                <img src="img/laboratorio2.png" alt="Calcoli 1" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+                <img src="img/laboratorio3.png" alt="Calcoli 2" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+            </div>
+        </div>
+    </div>
+
+    <!-- Step 3 -->
+    <div class="tappa">
+        <h4>STEP 3 – Inserimento nel simulatore anaerobico</h4>
+        <div class="tappa-content">
+            <div class="tappa-text">
+                <p>Abbiamo poi inserito la FORSU all’interno di un simulatore di un impianto di creazione di biogas in modo anaerobico tramite l’utilizzo di batteri (digestato).</p>
+                <img src="img/laboratorio4.png" alt="Inserimento nel simulatore 1" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+                <img src="img/laboratorio5.png" alt="Inserimento nel simulatore 2" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+            </div>
+        </div>
+    </div>
+
+    <!-- Step 4 -->
+    <div class="tappa">
+        <h4>STEP 4 – Risultati finali</h4>
+        <div class="tappa-content">
+            <div class="tappa-text">
+                <p>Dopo 2 settimane ci sono arrivati i risultati.</p>
+            </div>
+        </div>
+    </div>
+</div>
     </div>
 </div>
 
