--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <div class="tappa-text">
                 <p>Siamo andati in laboratorio, dove abbiamo realizzato del biogas a partire dalla FORSU portata da casa.</p>
                 <p>Arrivati in laboratorio ci è stato fatto pesare la FORSU prima di tagliarla in piccole parti.</p>
-                <img src="img/laboratorio1.png.png" alt="Pesatura FORSU" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+                <img src="img/laboratorio1.png" alt="Pesatura FORSU" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
             </div>
         </div>
     </div>
@@ -310,8 +310,8 @@
         <div class="tappa-content">
             <div class="tappa-text">
                 <p>Abbiamo calcolato la massa di Biogas creabile con le varie masse tramite le formule che ci hanno mostrato.</p>
-                <img src="img/laboratorio2.png.png" alt="Calcoli 1" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
-                <img src="img/laboratorio3.png.png" alt="Calcoli 2" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+                <img src="img/laboratorio2.png" alt="Calcoli 1" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+                <img src="img/laboratorio3.png" alt="Calcoli 2" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
             </div>
         </div>
     </div>
@@ -322,7 +322,7 @@
         <div class="tappa-content">
             <div class="tappa-text">
                 <p>Abbiamo poi inserito la FORSU all’interno di un simulatore di un impianto di creazione di biogas in modo anaerobico tramite l’utilizzo di batteri (digestato).</p>
-                <img src="img/laboratorio4.png.png" alt="Inserimento nel simulatore 1" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+                <img src="img/laboratorio4.png" alt="Inserimento nel simulatore 1" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
             </div>
         </div>
     </div>
