Inserite immagini laboratorio

--- a/index.html
+++ b/index.html
@@ -288,54 +288,75 @@
         </div>
 
 
-        <!-- Sezione LABORATORIO -->
-       <div id="laboratorio" class="section">
+<!-- Sezione LABORATORIO -->
+<div id="laboratorio" class="section">
     <h3>Laboratorio: Creazione di Biogas</h3>
 
-    <!-- Step 1 -->
+    <!-- STEP 1: Raccolta e sminuzzamento -->
     <div class="tappa">
-        <h4>STEP 1 – Preparazione della FORSU</h4>
+        <h4>STEP 1 – Raccolta e sminuzzamento della FORSU</h4>
         <div class="tappa-content">
             <div class="tappa-text">
-                <p>Siamo andati in laboratorio, dove abbiamo realizzato del biogas a partire dalla FORSU portata da casa.</p>
-                <p>Arrivati in laboratorio ci è stato fatto pesare la FORSU prima di tagliarla in piccole parti.</p>
-                <img src="img/laboratorio1.png" alt="Pesatura FORSU" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+                <p>Abbiamo portato in laboratorio della FORSU raccolta da casa. Per facilitare la decomposizione, è stata prima tagliata e sminuzzata in piccoli pezzi.</p>
+                <img src="img/laboratorio1.jpg" alt="FORSU sminuzzata 1" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+                <img src="img/laboratorio2.jpg" alt="FORSU sminuzzata 2" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
             </div>
         </div>
     </div>
 
-    <!-- Step 2 -->
+    <!-- STEP 2: Pesatura -->
     <div class="tappa">
-        <h4>STEP 2 – Calcolo della massa di Biogas</h4>
+        <h4>STEP 2 – Pesatura del materiale</h4>
         <div class="tappa-content">
             <div class="tappa-text">
-                <p>Abbiamo calcolato la massa di Biogas creabile con le varie masse tramite le formule che ci hanno mostrato.</p>
-                <img src="img/laboratorio2.png" alt="Calcoli 1" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
-                <img src="img/laboratorio3.png" alt="Calcoli 2" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+                <p>Abbiamo utilizzato una bilancia per conoscere la massa esatta della FORSU, necessaria per i calcoli successivi.</p>
+                <img src="img/laboratorio3.jpg" alt="Pesatura FORSU 1" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+                <img src="img/laboratorio4.jpg" alt="Pesatura FORSU 2" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
             </div>
         </div>
     </div>
 
-    <!-- Step 3 -->
+    <!-- STEP 3: Calcoli -->
     <div class="tappa">
-        <h4>STEP 3 – Inserimento nel simulatore anaerobico</h4>
+        <h4>STEP 3 – Calcolo della produzione teorica di Biogas</h4>
         <div class="tappa-content">
             <div class="tappa-text">
-                <p>Abbiamo poi inserito la FORSU all’interno di un simulatore di un impianto di creazione di biogas in modo anaerobico tramite l’utilizzo di batteri (digestato).</p>
-                <img src="img/laboratorio4.png" alt="Inserimento nel simulatore 1" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+                <p>Sulla base della massa pesata e della composizione media della FORSU, abbiamo calcolato il potenziale di produzione di biogas:</p>
+                <ul>
+                    <li>1 kg FORSU ≈ 500 L di biogas</li>
+                    <li>Se abbiamo 2 kg: 2 kg × 500 L = 1000 L di biogas</li>
+                    <li>Considerando una resa reale del 70%: 1000 × 0.7 = 700 L</li>
+                </ul>
+                <p>Quindi con 2 kg di FORSU potremmo produrre circa 700 litri di biogas.</p>
+                <img src="img/laboratorio5.jpg" alt="Calcoli biogas" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
             </div>
         </div>
     </div>
 
-    <!-- Step 4 -->
+    <!-- STEP 4: Inserimento nel digestore -->
     <div class="tappa">
-        <h4>STEP 4 – Risultati finali</h4>
+        <h4>STEP 4 – Inserimento nel digestore anaerobico</h4>
         <div class="tappa-content">
             <div class="tappa-text">
-                <p>Dopo 2 settimane ci sono arrivati i risultati.</p>
+                <p>La FORSU è stata inserita all'interno di un digestore anaerobico simulato, per dare inizio alla produzione di biogas grazie all'azione dei batteri.</p>
+                <img src="img/laboratorio6.jpg" alt="Inserimento nel digestore 1" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+                <img src="img/laboratorio7.jpg" alt="Inserimento nel digestore 2" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
             </div>
         </div>
     </div>
+
+    <!-- STEP 5: Risultati -->
+    <div class="tappa">
+        <h4>STEP 5 – Attesa e risultati finali</h4>
+        <div class="tappa-content">
+            <div class="tappa-text">
+                <p>Dopo circa 25 giorni di digestione, abbiamo ottenuto i risultati sperimentali che confermano la produzione di gas a partire dalla FORSU.</p>
+                <img src="img/laboratorio8.png" alt="Risultati finali" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+            </div>
+        </div>
+    </div>
+</div>
+
 </div>
     </div>
 </div>
