--- a/index.html
+++ b/index.html
@@ -317,21 +317,34 @@
     </div>
 
     <!-- STEP 3: Calcoli -->
-    <div class="tappa">
-        <h4>STEP 3 – Calcolo della produzione teorica di Biogas</h4>
-        <div class="tappa-content">
-            <div class="tappa-text">
-                <p>Sulla base della massa pesata e della composizione media della FORSU, abbiamo calcolato il potenziale di produzione di biogas:</p>
-                <ul>
-                    <li>1 kg FORSU ≈ 500 L di biogas</li>
-                    <li>Se abbiamo 2 kg: 2 kg × 500 L = 1000 L di biogas</li>
-                    <li>Considerando una resa reale del 70%: 1000 × 0.7 = 700 L</li>
-                </ul>
-                <p>Quindi con 2 kg di FORSU potremmo produrre circa 700 litri di biogas.</p>
-                <img src="img/laboratorio5.jpg" alt="Calcoli biogas" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
-            </div>
+<div class="tappa">
+    <h4>STEP 3 – Calcolo della produzione di Biogas</h4>
+    <div class="tappa-content">
+        <div class="tappa-text">
+            <p>Abbiamo effettuato i calcoli per stimare la quantità di biogas ottenibile dalla FORSU (Frazione Organica del Rifiuto Solido Urbano) che abbiamo portato in laboratorio.</p>
+
+            <ul>
+                <li><strong>FORSU raccolta</strong>: 806g + 352g + 360g = <strong>1518g</strong></li>
+                <li><strong>Contenuto solido FORSU (TS)</strong>: 250g/kg → <strong>~375g TS</strong></li>
+                <li><strong>Frazione organica (VS)</strong>: 0,9 gVS/gTS → <strong>~340g VS</strong></li>
+                <li><strong>Produzione teorica</strong>: 500 ml/gVS → <strong>~170L di biogas</strong></li>
+                <li><strong>Valore realistico stimato</strong>: rendimento 60% → <strong>~100L biogas</strong></li>
+                <li><strong>Contenuto medio di metano</strong>: 65% → <strong>~65L CH₄</strong></li>
+            </ul>
+
+            <p>Abbiamo quindi utilizzato le seguenti formule e parametri, come mostrato sulla lavagna e sulle slide:</p>
+            <ul>
+                <li><strong>Biogas teorico</strong>: 15 gVS × 500 ml = 7500 ml</li>
+                <li><strong>Metano contenuto</strong>: 7500 ml × 0.6 = 4500 ml CH₄</li>
+                <li><strong>Inoculo necessario</strong>: rapporto 2 gVSi / gVSforsu → 30 gVSi</li>
+                <li>30 gVSi / 38 gVSi/kg → <strong>0,79 kg inoculo</strong></li>
+            </ul>
+
+            <img src="img/laboratorio5.jpg" alt="Calcoli produzione biogas" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
         </div>
     </div>
+</div>
+
 
     <!-- STEP 4: Inserimento nel digestore -->
     <div class="tappa">
