--- a/index.html
+++ b/index.html
@@ -364,7 +364,16 @@
         <div class="tappa-content">
             <div class="tappa-text">
                 <p>Dopo circa 25 giorni di digestione, abbiamo ottenuto i risultati sperimentali che confermano la produzione di gas a partire dalla FORSU.</p>
+                <br>
+                <h6>Curva attesa:</h6>
+                <img src="img/laboratorio9.png" alt="Curva attesa" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+                <br>
+                <h6>Risultati ottenuti:</h6>
                 <img src="img/laboratorio8.png" alt="Risultati finali" style="width: 100%; margin-top: 15px; border-radius: 10px;" />
+                <p>Per approfondire con esattezza tutti i dati ottenuti dall'esperimento, consultare il file allegato in seguito:</p>
+                <iframe src="img/filedati.pdf" width="100%" height="600px" style="border: none;">
+                Questo browser non supporta la visualizzazione PDF. Puoi <a href="img/report.pdf" target="_blank">scaricare il file qui</a>.
+            </iframe>
             </div>
         </div>
     </div>
